log
Fri 19 Aug 2022 12:44:34 PM UTC: 
 tests:  0|6
total_score: 0/70
40daa90
Fri 19 Aug 2022 01:00:43 PM UTC: 
 list.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   l->size = 0;
      |    ^~
list.c: In function ‘pushFront’:
list.c:58:19: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   58 |   Node *newNode = createnode(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:58:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:60:6: error: ‘l’ undeclared (first use in this function)
   60 |   if(l->head != NULL)
      |      ^
list.c:60:6: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a618f87
Fri 19 Aug 2022 01:00:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   l->size = 0;
      |    ^~
list.c: In function ‘pushFront’:
list.c:58:19: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   58 |   Node *newNode = createnode(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:58:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:60:6: error: ‘l’ undeclared (first use in this function)
   60 |   if(l->head != NULL)
      |      ^
list.c:60:6: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
76c88d5
Fri 19 Aug 2022 01:03:30 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   l->size = 0;
      |    ^~
Compilation failed
b998938
Fri 19 Aug 2022 01:03:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aa34362
Fri 19 Aug 2022 01:04:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:59:6: error: ‘l’ undeclared (first use in this function)
   59 |   if(l == NULL) return NULL;
      |      ^
list.c:59:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:59:24: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   59 |   if(l == NULL) return NULL;
      |                        ^~~~
list.c:57:6: note: declared here
   57 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:60:19: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   60 |   Node *newNode = createnode(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:60:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
3c1c654
Fri 19 Aug 2022 01:04:49 PM UTC: 
 list.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:58:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   58 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:57:6: note: declared here
   57 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:59:19: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   59 |   Node *newNode = createnode(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:59:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
1bed61d
Fri 19 Aug 2022 01:05:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:58:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   58 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:57:6: note: declared here
   57 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4074b91
Fri 19 Aug 2022 01:05:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
758dd53
Fri 19 Aug 2022 01:07:48 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
6f01a30
Fri 19 Aug 2022 01:09:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
913cc65
Fri 19 Aug 2022 01:09:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
5da7ea5
Fri 19 Aug 2022 01:10:47 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 20/70
f3d4d51
Fri 19 Aug 2022 01:11:56 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
977cf41
Fri 19 Aug 2022 01:13:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:14: error: invalid initializer
   44 |     Node n = list->head;
      |              ^~~~
list.c:45:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   45 |     return (n);
      |            ^
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e4881f
Fri 19 Aug 2022 01:13:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   45 |     return (n);
      |            ^
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1ce0e73
Fri 19 Aug 2022 01:19:25 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:14: error: invalid initializer
   44 |     Node n = list->head;
      |              ^~~~
list.c:45:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   45 |     return (n);
      |            ^
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a9b3aeb
Fri 19 Aug 2022 01:21:36 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:3: error: ‘else’ without a previous ‘if’
   42 |   else
      |   ^~~~
list.c:44:14: error: invalid initializer
   44 |     Node n = list->head;
      |              ^~~~
list.c:45:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   45 |     return (n);
      |            ^
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9e492a
